@@ -5,6 +5,8 @@
  * $Id$
  */
 
+#include "Python.h"
+
 #include <math.h>
 #include <limits.h>
 #include "common.h"
