@@ -4,12 +4,13 @@
 
 /* $Id$ */
 
+#include "Python.h"
+
 #include "lber.h"
 #include "ldap.h"
 #if LDAP_API_VERSION < 2000
 #error Current python-ldap requires OpenLDAP 2.x
 #endif
-#include "Python.h"
 
 #if PYTHON_API_VERSION < 1007
 typedef PyObject*	_threadstate;
